<resources>
    <string name="app_name">Enrollment App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="add_event">Add Event</string>
    <string name="add_event_details">Add Event Details</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

</resources>